Update: input tags

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 <body>
     <h1>DATETIME ACTIVITY</h1>
     <p>Refresh to update</p>
+    <input type="text" name="name" id="name">
+    <button onclick="changeName()" id="submit">Submit</button>
+    <h1 id="guest">Hi guest! The time is: </h1>
     <!-- Set content later in JS -->
     <p id="raw-date"></p>
     <p id="today"></p>
